WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301592
[HDR] CoreGraphics filters do not support float16 unaccelerated backing stores
https://bugs.webkit.org/show_bug.cgi?id=301592
Summary
[HDR] CoreGraphics filters do not support float16 unaccelerated backing stores
Said Abou-Hallawa
Reported
2025-10-28 14:12:57 PDT
1. Launch mini-browser on macOS 2. Disable accelerated drawing by unchecking "Setting/ Enable Accelerated Drawing". 3. Open the attached test case. Result: CoreGraphics fires an assertion because a blur filter is applied on a float16 unaccelerated backing store. The fix is to disable CoreGraphics filters for float16 unaccelerated backing stores and use software filters for now. Software filters do not support float16 backing stores, But copying the sourceImage to 8-bit backing store converts the HDR display to SDR. Therefore the filter works but on SDR backing store.
Attachments
HDR image
(157.18 KB, image/jpeg)
2025-10-28 14:14 PDT
,
Said Abou-Hallawa
no flags
Details
test case
(156 bytes, text/html)
2025-10-28 14:16 PDT
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2025-10-28 14:13:29 PDT
rdar://163220052
Said Abou-Hallawa
Comment 2
2025-10-28 14:14:39 PDT
Created
attachment 477214
[details]
HDR image
Said Abou-Hallawa
Comment 3
2025-10-28 14:16:08 PDT
Created
attachment 477215
[details]
test case
Said Abou-Hallawa
Comment 4
2025-10-28 14:20:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53099
EWS
Comment 5
2025-10-29 13:02:10 PDT
Committed
302306@main
(9f930ab5c13c): <
https://commits.webkit.org/302306@main
> Reviewed commits have been landed. Closing PR #53099 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug