[HDR] CoreGraphics filters do not support float16 unaccelerated backing stores https://bugs.webkit.org/show_bug.cgi?id=301592 rdar://163220052

Reviewed by Simon Fraser.

CoreGraphics fires an assertion when a blur filter is applied on a float16
unaccelerated backing store.

Disable CoreGraphics filters for float16 unaccelerated backing stores and use
software filters for now. Software filters do not support float16 backing stores,
But copying the sourceImage to 8-bit backing store converts the HDR display to
SDR. Therefore the filter works but on SDR backing store.

Test: fast/images/hdr-unaccelerated-image-blur-filter.html
* LayoutTests/TestExpectations:
* LayoutTests/fast/images/hdr-unaccelerated-image-blur-filter-expected.html: Added.
* LayoutTests/fast/images/hdr-unaccelerated-image-blur-filter.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setupFilters):
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayerFilters.cpp:
(WebCore::RenderLayerFilters::beginFilterEffect):
* Source/WebCore/rendering/RenderLayerFilters.h:

Canonical link: https://commits.webkit.org/302306@main